CSCE322/hw1_ANTLR/testing/.antlr/csce322a01part01Parser.java
// Generated from c:\Users\Nasi\Desktop\FALL2019\CSCE322\homeworks\hw1\testing\csce322a01part01.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class csce322a01part01Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SECTIONBEGIN=1, SECTIONEND=2, SECTIONTITLE=3, ASSIGNVALUE=4, MOVES=5, 
		MAZE=6, NUM=7, UNDERSCORE=8, ROWEND=9, MAZEBEGIN=10, MAZEEND=11, LISTBEGIN=12, 
		LISTEND=13, WS=14, ANYTHING=15;
	public static final int
		RULE_mazeGame = 0, RULE_moves = 1, RULE_maze = 2, RULE_moveSymbol = 3, 
		RULE_mazeSymbol = 4, RULE_sectionTitle = 5, RULE_sectionBegin = 6, RULE_sectionEnd = 7, 
		RULE_listBegin = 8, RULE_listEnd = 9, RULE_mazeBegin = 10, RULE_mazeEnd = 11, 
		RULE_moveChar = 12, RULE_mazeChar = 13, RULE_endRow = 14, RULE_assignval = 15, 
		RULE_number = 16, RULE_error = 17;
	public static final String[] ruleNames = {
		"mazeGame", "moves", "maze", "moveSymbol", "mazeSymbol", "sectionTitle", 
		"sectionBegin", "sectionEnd", "listBegin", "listEnd", "mazeBegin", "mazeEnd", 
		"moveChar", "mazeChar", "endRow", "assignval", "number", "error"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'{'", "'}'", null, "'@'", null, null, null, "'_'", "'$'", "'('", 
		"')'", "'['", "']'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "SECTIONBEGIN", "SECTIONEND", "SECTIONTITLE", "ASSIGNVALUE", "MOVES", 
		"MAZE", "NUM", "UNDERSCORE", "ROWEND", "MAZEBEGIN", "MAZEEND", "LISTBEGIN", 
		"LISTEND", "WS", "ANYTHING"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "csce322a01part01.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public csce322a01part01Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class MazeGameContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(csce322a01part01Parser.EOF, 0); }
		public MazeContext maze() {
			return getRuleContext(MazeContext.class,0);
		}
		public MovesContext moves() {
			return getRuleContext(MovesContext.class,0);
		}
		public ErrorContext error() {
			return getRuleContext(ErrorContext.class,0);
		}
		public MazeGameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mazeGame; }
	}

	public final MazeGameContext mazeGame() throws RecognitionException {
		MazeGameContext _localctx = new MazeGameContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_mazeGame);
		try {
			setState(50);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(42);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					{
					setState(36);
					maze();
					setState(37);
					moves();
					}
					}
					break;
				case 2:
					{
					{
					setState(39);
					moves();
					setState(40);
					maze();
					}
					}
					break;
				}
				setState(44);
				match(EOF);
				System.out.println("File Ending");
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(47);
				match(EOF);
				System.out.println("File Ending");
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(49);
				error();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MovesContext extends ParserRuleContext {
		public SectionBeginContext sectionBegin() {
			return getRuleContext(SectionBeginContext.class,0);
		}
		public SectionTitleContext sectionTitle() {
			return getRuleContext(SectionTitleContext.class,0);
		}
		public AssignvalContext assignval() {
			return getRuleContext(AssignvalContext.class,0);
		}
		public ListBeginContext listBegin() {
			return getRuleContext(ListBeginContext.class,0);
		}
		public ListEndContext listEnd() {
			return getRuleContext(ListEndContext.class,0);
		}
		public SectionEndContext sectionEnd() {
			return getRuleContext(SectionEndContext.class,0);
		}
		public List<MoveSymbolContext> moveSymbol() {
			return getRuleContexts(MoveSymbolContext.class);
		}
		public MoveSymbolContext moveSymbol(int i) {
			return getRuleContext(MoveSymbolContext.class,i);
		}
		public ErrorContext error() {
			return getRuleContext(ErrorContext.class,0);
		}
		public MovesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moves; }
	}

	public final MovesContext moves() throws RecognitionException {
		MovesContext _localctx = new MovesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_moves);
		try {
			int _alt;
			setState(66);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(52);
				sectionBegin();
				setState(53);
				sectionTitle();
				setState(54);
				assignval();
				setState(55);
				listBegin();
				setState(59);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(56);
						moveSymbol();
						}
						} 
					}
					setState(61);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				}
				setState(62);
				listEnd();
				setState(63);
				sectionEnd();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(65);
				error();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MazeContext extends ParserRuleContext {
		public SectionBeginContext sectionBegin() {
			return getRuleContext(SectionBeginContext.class,0);
		}
		public SectionTitleContext sectionTitle() {
			return getRuleContext(SectionTitleContext.class,0);
		}
		public AssignvalContext assignval() {
			return getRuleContext(AssignvalContext.class,0);
		}
		public MazeBeginContext mazeBegin() {
			return getRuleContext(MazeBeginContext.class,0);
		}
		public MazeEndContext mazeEnd() {
			return getRuleContext(MazeEndContext.class,0);
		}
		public SectionEndContext sectionEnd() {
			return getRuleContext(SectionEndContext.class,0);
		}
		public List<MazeSymbolContext> mazeSymbol() {
			return getRuleContexts(MazeSymbolContext.class);
		}
		public MazeSymbolContext mazeSymbol(int i) {
			return getRuleContext(MazeSymbolContext.class,i);
		}
		public ErrorContext error() {
			return getRuleContext(ErrorContext.class,0);
		}
		public MazeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_maze; }
	}

	public final MazeContext maze() throws RecognitionException {
		MazeContext _localctx = new MazeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_maze);
		try {
			int _alt;
			setState(82);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(68);
				sectionBegin();
				setState(69);
				sectionTitle();
				setState(70);
				assignval();
				setState(71);
				mazeBegin();
				setState(75);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(72);
						mazeSymbol();
						}
						} 
					}
					setState(77);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				}
				setState(78);
				mazeEnd();
				setState(79);
				sectionEnd();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				error();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MoveSymbolContext extends ParserRuleContext {
		public MoveCharContext moveChar() {
			return getRuleContext(MoveCharContext.class,0);
		}
		public TerminalNode UNDERSCORE() { return getToken(csce322a01part01Parser.UNDERSCORE, 0); }
		public MoveSymbolContext moveSymbol() {
			return getRuleContext(MoveSymbolContext.class,0);
		}
		public ErrorContext error() {
			return getRuleContext(ErrorContext.class,0);
		}
		public MoveSymbolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moveSymbol; }
	}

	public final MoveSymbolContext moveSymbol() throws RecognitionException {
		MoveSymbolContext _localctx = new MoveSymbolContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_moveSymbol);
		try {
			setState(90);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(84);
				moveChar();
				setState(85);
				match(UNDERSCORE);
				setState(86);
				moveSymbol();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				moveChar();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(89);
				error();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MazeSymbolContext extends ParserRuleContext {
		public MazeCharContext mazeChar() {
			return getRuleContext(MazeCharContext.class,0);
		}
		public EndRowContext endRow() {
			return getRuleContext(EndRowContext.class,0);
		}
		public MazeSymbolContext mazeSymbol() {
			return getRuleContext(MazeSymbolContext.class,0);
		}
		public List<NumberContext> number() {
			return getRuleContexts(NumberContext.class);
		}
		public NumberContext number(int i) {
			return getRuleContext(NumberContext.class,i);
		}
		public ErrorContext error() {
			return getRuleContext(ErrorContext.class,0);
		}
		public MazeSymbolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mazeSymbol; }
	}

	public final MazeSymbolContext mazeSymbol() throws RecognitionException {
		MazeSymbolContext _localctx = new MazeSymbolContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_mazeSymbol);
		try {
			setState(103);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				mazeChar();
				setState(93);
				endRow();
				setState(94);
				mazeSymbol();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(96);
				mazeChar();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(97);
				number();
				setState(98);
				endRow();
				setState(99);
				number();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(101);
				number();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(102);
				error();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionTitleContext extends ParserRuleContext {
		public Token SECTIONTITLE;
		public TerminalNode SECTIONTITLE() { return getToken(csce322a01part01Parser.SECTIONTITLE, 0); }
		public ErrorContext error() {
			return getRuleContext(ErrorContext.class,0);
		}
		public SectionTitleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sectionTitle; }
	}

	public final SectionTitleContext sectionTitle() throws RecognitionException {
		SectionTitleContext _localctx = new SectionTitleContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_sectionTitle);
		try {
			setState(108);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SECTIONTITLE:
				enterOuterAlt(_localctx, 1);
				{
				setState(105);
				((SectionTitleContext)_localctx).SECTIONTITLE = match(SECTIONTITLE);
				System.out.println("Section Title: " + (((SectionTitleContext)_localctx).SECTIONTITLE!=null?((SectionTitleContext)_localctx).SECTIONTITLE.getText():null));
				}
				break;
			case ANYTHING:
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				error();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionBeginContext extends ParserRuleContext {
		public Token SECTIONBEGIN;
		public TerminalNode SECTIONBEGIN() { return getToken(csce322a01part01Parser.SECTIONBEGIN, 0); }
		public ErrorContext error() {
			return getRuleContext(ErrorContext.class,0);
		}
		public SectionBeginContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sectionBegin; }
	}

	public final SectionBeginContext sectionBegin() throws RecognitionException {
		SectionBeginContext _localctx = new SectionBeginContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_sectionBegin);
		try {
			setState(113);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SECTIONBEGIN:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				((SectionBeginContext)_localctx).SECTIONBEGIN = match(SECTIONBEGIN);
				System.out.println("Section Beginning: " + (((SectionBeginContext)_localctx).SECTIONBEGIN!=null?((SectionBeginContext)_localctx).SECTIONBEGIN.getText():null));
				}
				break;
			case ANYTHING:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				error();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionEndContext extends ParserRuleContext {
		public Token SECTIONEND;
		public TerminalNode SECTIONEND() { return getToken(csce322a01part01Parser.SECTIONEND, 0); }
		public ErrorContext error() {
			return getRuleContext(ErrorContext.class,0);
		}
		public SectionEndContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sectionEnd; }
	}

	public final SectionEndContext sectionEnd() throws RecognitionException {
		SectionEndContext _localctx = new SectionEndContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_sectionEnd);
		try {
			setState(118);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SECTIONEND:
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				((SectionEndContext)_localctx).SECTIONEND = match(SECTIONEND);
				System.out.println("Section Ending: " + (((SectionEndContext)_localctx).SECTIONEND!=null?((SectionEndContext)_localctx).SECTIONEND.getText():null));
				}
				break;
			case ANYTHING:
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				error();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListBeginContext extends ParserRuleContext {
		public TerminalNode LISTBEGIN() { return getToken(csce322a01part01Parser.LISTBEGIN, 0); }
		public ErrorContext error() {
			return getRuleContext(ErrorContext.class,0);
		}
		public ListBeginContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listBegin; }
	}

	public final ListBeginContext listBegin() throws RecognitionException {
		ListBeginContext _localctx = new ListBeginContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_listBegin);
		try {
			setState(123);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LISTBEGIN:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				match(LISTBEGIN);
				System.out.println("List Beginning: [" );
				}
				break;
			case ANYTHING:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				error();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListEndContext extends ParserRuleContext {
		public TerminalNode LISTEND() { return getToken(csce322a01part01Parser.LISTEND, 0); }
		public ErrorContext error() {
			return getRuleContext(ErrorContext.class,0);
		}
		public ListEndContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listEnd; }
	}

	public final ListEndContext listEnd() throws RecognitionException {
		ListEndContext _localctx = new ListEndContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_listEnd);
		try {
			setState(128);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LISTEND:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				match(LISTEND);
				System.out.println("List Ending: ]" );
				}
				break;
			case ANYTHING:
				enterOuterAlt(_localctx, 2);
				{
				setState(127);
				error();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MazeBeginContext extends ParserRuleContext {
		public TerminalNode MAZEBEGIN() { return getToken(csce322a01part01Parser.MAZEBEGIN, 0); }
		public ErrorContext error() {
			return getRuleContext(ErrorContext.class,0);
		}
		public MazeBeginContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mazeBegin; }
	}

	public final MazeBeginContext mazeBegin() throws RecognitionException {
		MazeBeginContext _localctx = new MazeBeginContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_mazeBegin);
		try {
			setState(133);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MAZEBEGIN:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				match(MAZEBEGIN);
				System.out.println("Maze Beginning: (" );
				}
				break;
			case ANYTHING:
				enterOuterAlt(_localctx, 2);
				{
				setState(132);
				error();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MazeEndContext extends ParserRuleContext {
		public TerminalNode MAZEEND() { return getToken(csce322a01part01Parser.MAZEEND, 0); }
		public ErrorContext error() {
			return getRuleContext(ErrorContext.class,0);
		}
		public MazeEndContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mazeEnd; }
	}

	public final MazeEndContext mazeEnd() throws RecognitionException {
		MazeEndContext _localctx = new MazeEndContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_mazeEnd);
		try {
			setState(138);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MAZEEND:
				enterOuterAlt(_localctx, 1);
				{
				setState(135);
				match(MAZEEND);
				System.out.println("Maze Ending: )" );
				}
				break;
			case ANYTHING:
				enterOuterAlt(_localctx, 2);
				{
				setState(137);
				error();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MoveCharContext extends ParserRuleContext {
		public Token MOVES;
		public TerminalNode MOVES() { return getToken(csce322a01part01Parser.MOVES, 0); }
		public ErrorContext error() {
			return getRuleContext(ErrorContext.class,0);
		}
		public MoveCharContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moveChar; }
	}

	public final MoveCharContext moveChar() throws RecognitionException {
		MoveCharContext _localctx = new MoveCharContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_moveChar);
		try {
			setState(143);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MOVES:
				enterOuterAlt(_localctx, 1);
				{
				setState(140);
				((MoveCharContext)_localctx).MOVES = match(MOVES);
				System.out.println("Move Symbol: " + (((MoveCharContext)_localctx).MOVES!=null?((MoveCharContext)_localctx).MOVES.getText():null));
				}
				break;
			case ANYTHING:
				enterOuterAlt(_localctx, 2);
				{
				setState(142);
				error();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MazeCharContext extends ParserRuleContext {
		public Token MAZE;
		public TerminalNode MAZE() { return getToken(csce322a01part01Parser.MAZE, 0); }
		public ErrorContext error() {
			return getRuleContext(ErrorContext.class,0);
		}
		public MazeCharContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mazeChar; }
	}

	public final MazeCharContext mazeChar() throws RecognitionException {
		MazeCharContext _localctx = new MazeCharContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_mazeChar);
		try {
			setState(148);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MAZE:
				enterOuterAlt(_localctx, 1);
				{
				setState(145);
				((MazeCharContext)_localctx).MAZE = match(MAZE);
				System.out.println("Maze Symbol: " + (((MazeCharContext)_localctx).MAZE!=null?((MazeCharContext)_localctx).MAZE.getText():null));
				}
				break;
			case ANYTHING:
				enterOuterAlt(_localctx, 2);
				{
				setState(147);
				error();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EndRowContext extends ParserRuleContext {
		public TerminalNode ROWEND() { return getToken(csce322a01part01Parser.ROWEND, 0); }
		public ErrorContext error() {
			return getRuleContext(ErrorContext.class,0);
		}
		public EndRowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_endRow; }
	}

	public final EndRowContext endRow() throws RecognitionException {
		EndRowContext _localctx = new EndRowContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_endRow);
		try {
			setState(153);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ROWEND:
				enterOuterAlt(_localctx, 1);
				{
				setState(150);
				match(ROWEND);
				System.out.println("Row Ending: $" );
				}
				break;
			case ANYTHING:
				enterOuterAlt(_localctx, 2);
				{
				setState(152);
				error();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignvalContext extends ParserRuleContext {
		public TerminalNode ASSIGNVALUE() { return getToken(csce322a01part01Parser.ASSIGNVALUE, 0); }
		public ErrorContext error() {
			return getRuleContext(ErrorContext.class,0);
		}
		public AssignvalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignval; }
	}

	public final AssignvalContext assignval() throws RecognitionException {
		AssignvalContext _localctx = new AssignvalContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_assignval);
		try {
			setState(158);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ASSIGNVALUE:
				enterOuterAlt(_localctx, 1);
				{
				setState(155);
				match(ASSIGNVALUE);
				System.out.println("Assign Value: @");
				}
				break;
			case ANYTHING:
				enterOuterAlt(_localctx, 2);
				{
				setState(157);
				error();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumberContext extends ParserRuleContext {
		public Token NUM;
		public TerminalNode NUM() { return getToken(csce322a01part01Parser.NUM, 0); }
		public ErrorContext error() {
			return getRuleContext(ErrorContext.class,0);
		}
		public NumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number; }
	}

	public final NumberContext number() throws RecognitionException {
		NumberContext _localctx = new NumberContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_number);
		try {
			setState(163);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUM:
				enterOuterAlt(_localctx, 1);
				{
				setState(160);
				((NumberContext)_localctx).NUM = match(NUM);
				System.out.println("Number: " + (((NumberContext)_localctx).NUM!=null?((NumberContext)_localctx).NUM.getText():null));
				}
				break;
			case ANYTHING:
				enterOuterAlt(_localctx, 2);
				{
				setState(162);
				error();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ErrorContext extends ParserRuleContext {
		public Token ANYTHING;
		public TerminalNode ANYTHING() { return getToken(csce322a01part01Parser.ANYTHING, 0); }
		public ErrorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_error; }
	}

	public final ErrorContext error() throws RecognitionException {
		ErrorContext _localctx = new ErrorContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_error);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			((ErrorContext)_localctx).ANYTHING = match(ANYTHING);
			System.out.println("Something on Line "+ (((ErrorContext)_localctx).ANYTHING!=null?((ErrorContext)_localctx).ANYTHING.getLine():0) + " is Unrecognized."); System.exit(1);
					
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}